feat: jus-46-질문 생성 로직 수정